--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@reduxjs/toolkit": "^2.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.1",
     "sonner": "^1.4.1",
     "tailwind-merge": "^2.2.1",
